2006-04-25  Alexander Larsson  <alexl@redhat.com>

	* modules/ftp-method.c:
	Better handling of existing files in do_create and do_makedir.
	Patch from Fabio Bonelli.

2006-04-25  Alexander Larsson  <alexl@redhat.com>

	* imported/neon/Makefile.am:
	Include sources needed to resolve all symbols.
	
2006-04-25  Julio M. Merino Vidal  <jmmv@NetBSD.org>

	* libgnomevfs/xdgmimemagic.c, modules/fstype.c: Removed the hardcoded
	errno extern declaration as it clashes with the one in errno.h.
	Fixes build under Dragonfly BSD and closes bug #336382.

2006-04-25  Alexander Larsson  <alexl@redhat.com>

	* libgnomevfs/gnome-vfs-mime-info-cache.c (get_all_parent_types):
	Lock around calls to xdg_mime_*

2006-04-21  Alexander Larsson  <alexl@redhat.com>

	* modules/default-modules.conf:
	Remove cdda, its in cdda-module.conf

2006-04-21  Julio M. Merino Vidal  <jmmv@NetBSD.org>

	* configure.in:
	* modules/cdda-method.c: Check if cdparanoia contains FreeBSD-specific
	patches to use their libcam library.  If so, use their modified
	cdrom_drive structure; otherwise, use the pristine definition.
	Fixes cdda-method's build under non-Linux, non-FreeBSD systems (such
	as NetBSD) and closes bug #134276.

2006-04-21  Alexander Larsson  <alexl@redhat.com>

	* modules/ftp-method.c (do_read_directory): 
	Escape the symlink name before calling resolve_relative.

2006-04-21  Alexander Larsson  <alexl@redhat.com>

	* libgnomevfs/gnome-vfs-utils.c
	(_gnome_vfs_uri_resolve_all_symlinks_uri):
	Escape the symlink name before calling resolve_relative.
	
2006-04-21  Alexander Larsson  <alexl@redhat.com>

	* libgnomevfs/gnome-vfs-utils.c:
	Correct the first line of comments in the acceptable table.
	
2006-04-21  Alexander Larsson  <alexl@redhat.com>

	* libgnomevfs/gnome-vfs-utils.c:
	Escape ? in paths. This is a special character in URIs which there is
	no reason not to escape.

	* libgnomevfs/gnome-vfs-xfer.c:
	Correctly escape pathnames from _visit_uri when appending to uris.
	